# src/docs/swagger.yaml
@@ -235,4 +235,14 @@ paths:
           description: Bad Request
       tags:
       - Advertisement
+  /task/expire:
+    post:
+      description: Set "status" the ads column to false when it expires.
+      responses:
+        "200":
+          description: OK
+        "400":
+          description: Bad Request
+      tags:
+        - Task
 swagger: "2.0"
